--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
-    "mongodb": "^3.1.1"
+    "mongodb": "^3.1.1",
+    "nodemon": "^1.18.3"
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.24.1"
