--- a/package.json
+++ b/package.json
@@ -4,15 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js --exec babel-node --presets es2015"
+    "start": "node index.js --exec babel-node --presets es2015"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
-    "mongodb": "^3.1.1",
-    "nodemon": "^1.18.3"
+    "mongodb": "^3.1.1"
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.24.1"
