--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js --exec babel-node --presets es2015"
+    "start": "node index.js",
+    "dev": "nodemon index.js --exec babel-node --presets es2015"
   },
   "author": "",
   "license": "ISC",
