--- a/package.json
+++ b/package.json
@@ -15,12 +15,10 @@
   "dependencies": {
     "babel": "^6.23.0",
     "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
     "mongodb": "^3.1.1"
-  },
-  "devDependencies": {
-    "babel-preset-env": "^1.7.0"
   },
   "engines": {
     "node": "10.0.0"
